--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
         "fabpot/goutte": "^3.2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5.5"
+        "phpunit/phpunit": "^8.5.5",
+        "squizlabs/php_codesniffer": "~3.5.5",
+        "phpmd/phpmd": "^2.8.2"
     }
 }
