--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .docker/
 .codelike_web_docker
 README.md
-/vendor
+vendor
 composer.json
 composer.lock
-/_tmp1
-/_tmp2
-/_tmp3
+_tmp1/
+_tmp2/
+_tmp3/
 .idea
-/ide
-/fefactor
-/debug
+ide/
+fefactor/
+debug/
